--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,7 +60,7 @@ orchard = { version = "0.8.0", default-features = false }
 pasta_curves = "0.5"
 
 # - Transparent
-hdwallet = { git = "https://github.com/fluidvanadium/hdwallet.git", branch = "master" }
+hdwallet = { git = "https://github.com/fluidvanadium/hdwallet.git", tag = "update_secp256k1_to_0.27.0" }
 ripemd = "0.1"
 secp256k1 = "0.27"
 
@@ -99,7 +99,7 @@ tonic-build = { version = "0.10", default-features = false }
 
 # Secret management
 secrecy = "0.8"
-subtle = "2.2.3"
+subtle = "2.4.1"
 
 # Static constants
 lazy_static = "1"
